# career_unplugged

./: .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  setup.cfg
.github/: dockerfile-scanner-workflow.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2024-02-05_fea110c87f80_create_user_table.py  2024-03-20_1d3cfc906308_create_user_job_tables.py  2024-04-08_5c5a0c12a2c8_create_jobs_table.py  2025-10-23_ad96a0e3fd9a_add_career_page_model.py  2025-12-06_85ddbb56d697_update_job_with_remote_flag_reason_.py  2025-12-22_3cf17d40f615_make_country_in_job_nullable_to_support_.py  2025-12-23_b003b7edbdd9_add_job_source_rename_linkedin_url_to_.py  2026-01-05_a283b67eaddb_add_to_job_source_enum.py  2026-01-16_c11a1b91cd0a_add_user_table.py  2026-01-16_cf19de7f0b44_add_user_job_mapping_table.py  2026-01-27_378e9db4feb3_add_personio_scraper.py  2026-02-01_2e9b8c9c4d6b_add_career_page_deactivation_fields.py  2026-02-02_1f2e3d4c5b6a_add_job_career_page_id.py  2026-02-02_9b1a2f6d7e4c_add_career_page_last_synced_at.py  2026-02-03_4d2c9a7b1f0e_add_worker_run_table.py  2026-02-03_e71265f24e2d_add_unknown_remote_status.py  2026-03-15_f3a2b1c4d5e6_add_ats_source_url_and_linkedin_url.py  2026-03-16_d4e5f6a7b8c9_split_source_url_into_ats_and_linkedin.py  2026-03-18_016b55ff2d31_add_job_tag_table.py  2026-03-20_95ad9dc508cb_remove_keyword_match_columns.py  2026-03-21_f1a2b3c4d5e6_add_remote_score_to_job.py
app/: job_analyser.py  job_scraper.py  search_profile.py  settings.py
app/auth/: current_user.py
app/db/: db.py  orm_mixins.py
app/filters/: career_page_filter.py  job.py  user_activity.py
app/handlers/: career_page.py  dashboard.py  job.py  job_tag.py  user.py  worker_run.py
app/job_analysis/: __init__.py  description_extractor.py
app/job_scrapers/: ats_scraper_base.py  ats_scraper_factory.py  linkedin.py  scraper.py  utils.py
app/log/: __init__.py  log.py
app/models/: __init__.py  base_model.py  career_page.py  hello_world.py  job.py  job_tag.py  user.py  user_job.py  worker_run.py
app/routers/: career_pages.py  dashboard.py  job.py  (+5 more)
docker/: local-dev.Dockerfile
docs/: cloud-readiness-report.md
migration/: create_tables.py
tests/: conftest.py  test_script_entrypoints.py
(+111 files in other folders)
