[tool.poetry]
name = "career_unplugged"
version = "0.1.0"
description = "basic template"
authors = ["matthewh <mholman000@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
alembic = "^1.9.0"
better-exceptions = "0.3.3"
fastapi = "^0.115.0"
pydantic = ">=2.3.0,<3.0.0"
pydantic_settings = "^2.0.0"
python-dateutil = "~=2.8.2"
SQLAlchemy = ">=2.0.0"
sqlalchemy-stubs = "0.4"
sqlalchemy-utils = "0.41.1"
#  starlette = "0.19.1"  no need to explicitly install allow fastpai to handle dependecy
uvicorn = {version = "^0.30.0", extras = ["standard"]}
freezegun = "1.2.1"
pre-commit = "^3.6.0"
pytest = "7.2.0"
pytest-cov = "4.0.0"
pytest-github-actions-annotate-failures = "^0.1.8"
sqlmodel = "^0.0.16"
beautifulsoup4 = "4.12.3"
tls-client = "1.0.1"
markdownify = "1.1.0"
psycopg2-binary = "^2.9.10"
alembic-autogenerate-enums = "^0.1.2"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.10.0"
httpx = "0.22.0"
pre-commit = "^3.6.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
)/
'''

[tool.coverage.run]
omit = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
